<resources>
    <string name="app_name">foodie_app</string>

    <string name="app_motto">Compartilhe seus Sonhos</string>

    <string name="title_onboarding_1">Ache receitas de culinária do mundo inteiro</string>
    <string name="title_onboarding_2">Crie uma comunidade com amantes de comida de todo lugar</string>
    <string name="title_onboarding_3">Registre AQUELA receita que deu super certo</string>

    <!-- DESCRIÇÕES DOS ELEMENTOS -->
    <string name="desc_bg_splash">Plano de fundo da Splashscreen </string>
    <string name="desc_logo_splash">Logomarca na Splashscreen</string>

    <string name="desc_bg_login">Plano de fundo da tela de login</string>
    <string name="desc_logo_login">Logomarca na tela de login</string>

    <string name="desc_bg_cadastro">Plano de fundo da tela de cadastro</string>

    <string name="desc_bg_reset">Plano de fundo da tela de resta senha</string>

    <!-- FIM DA DESCRIÇÃO DOS ELEMENTOS -->

    <!--HINTS -->
    <string name="hint_login">Login</string>
    <string name="hint_password">Senha</string>

    <string name="hint_nome_cadastro">Nome</string>
    <string name="hint_sobrenome_cadastro">Sobrenome</string>
    <string name="hint_email_cadastro">e-mail</string>
    <string name="hint_telefone_cadastro">Telefone</string>
    <string name="hint_password_cadastro">Senha</string>
    <string name="hint_confirm_password_cadastro">Confirmar Senha</string>

    <string name="hint_email_reset">e-mail cadastrado</string>
    <!-- FIM DAS HINTS-->

    <!-- BOTÕES -->
    <string name="bt_login_enter">Entrar</string>
    <string name="bt_login_cadastrar">Cadastrar</string>
    <string name="bt_login_esqueci_senha">Esqueci a Senha</string>

    <string name="bt_confirmar_cadastro">Confirmar</string>
    <string name="bt_cadastro_voltar">Voltar</string>

    <string name="bt_send_reset">Enviar</string>
    <string name="bt_voltar_reset">Voltar</string>

    <string name="bt_go_onboard">Vamos lá</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- STINGS DA TELA HOME -->
    <string name="home">Timeline</string>

    <!-- STRINGS DA TELA DE TOP RECEITAS -->
    <string name="top_title">Top Receitas do Dia</string>

    <!--  STRINGS DO VIEW DE RECEITAS  -->
    <string name="receita_title">Pão Frances com ovo!</string>
    <string name="body_receita">Aqui estará um resumo do corpo da receita</string>
    <string name="username">Fulano de Tal</string>

    <!-- STRINGS DO CHATBOT -->
    <string name="hint_campo_busca">Pesquise algo!</string>
    <string name="chatbot_title">Bem-Vindo ao ChatBot!</string>
    <string name="button_buscar">Buscar!</string>

    <!-- STRINGS NEW RECIPE -->
    <string name="new_recipe_title">Nova Receita</string>
    <string name="new_recipe_description">Descrição da receita</string>
    <string name="new_recipe_ingredients">Ingredientes</string>
    <string name="new_recipe_preparo">Modo de preparo</string>
    <string name="button_pics_new_recipe">Adicionar Fotos</string>
    <string name="button_ok_new_recipe">OK!</string>

    <!-- STRINGS FULL RECIPE -->
    <string name="full_recipe_title">Pão francês com ovo!</string>
    <string name="full_recipe_body">Corpo da Receita virá aqui! (Ingredientes + Modo de Preparo)</string>

    <!-- STRINGS DA TELA DE PERFIL -->
    <string name="nome_usuario">Fulano de Tal</string>
    <string name="info_usuario">Aqui estarão informações sobre o usuário</string>
</resources>